[package]
name = "combined_noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = "18.0.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
hyper = "1.3.1"
serde_json = "1.0.64"
noise-protocol = "0.2.0"
snow = { path = "../snow" }

