[package]
name = "combined_noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
hyper = { version = "1.3.1"}
noise-protocol = { version = "0.2.0"}
snow = { path = "../snow" }
tungstenite = { version = "0.23.0"}
lazy_static = { version = "1.4"}

jsonrpsee = { version = "0.23.1", features = ["jsonrpsee-proc-macros", "server", "client", "jsonrpsee-core", "tracing"] }
tokio = { version = "1.38.0", features = ["full"] }
reconnecting-jsonrpsee-ws-client = { version = "0.4.2" }
serde_json = { version = "1.0.117"}

# Default crypto provider
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
blake2 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
curve25519-dalek = { version = "4", optional = true }
futures-util = { version = "0.3.30"}
tokio-tungstenite = { version = "0.23.0"}

[features]
default = ["default-resolver"]
default-resolver = ["aes-gcm", "chacha20poly1305", "blake2", "sha2", "curve25519-dalek"]

